NTI-5360 - fix cropped checkmarks

--- a/src/overview/lesson/common/BaseListItem.scss
+++ b/src/overview/lesson/common/BaseListItem.scss
@@ -64,9 +64,12 @@
 		& > .title {
 			font: normal 400 1rem/1.3 $body-font-family;
 			color: $primary-grey;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
+
+			&.plain {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 	}
 
@@ -100,7 +103,7 @@
 
 			&.lesson-overview-base-list-item-table-info-cell {
 				flex: 1 1 auto;
-				overflow: hidden;
+				max-width: 100%;
 			}
 		}
 	}
